# reference-app-helper

./: .coverage  .env  .gitignore  CODEOWNERS  CONFIGURATION.md  CONTRIBUTING.md  Procfile  README.md  api-spec.yaml  app.json  main.py  pyproject.toml  requirements.txt
.cursor/rules/: python-development.mdc
app/: db.py  embeddings.py  github.py  main.py  rag.py  settings.py
app/routers/: accounts.py  datacloud.py  search.py  unitofwork.py
docs/: RAG_MODULE.md  SEARCH_API.md  SETTINGS_USAGE.md
tests/: conftest.py  test_main.py
tests/routers/: test_accounts.py  test_datacloud.py  test_search.py  test_unitofwork.py
